# translator

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
core/: forms.py  urls.py  views.py
core/static/css/: main.css
core/templates/: base.html  form.html  metods.html  result.html
tests/: test_client.py
translator/: service.py  settings.py  urls.py
