[tool.poetry]
name = "translator"
version = "0.1.0"
description = "translator api"
authors = ["azat715 <azat715@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
isort = "^5.9.1"
pylint-django = "^2.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
